# TutorialForDocker

./: .gitignore  Dockerfile  Dockerfile_flask  Dockerfile_go  MANIFEST.in  README.md  app.py  build.ps1  build.sh  build_image.ps1  build_image.sh  build_manifest.ps1  build_manifest.sh  create_network.ps1  create_network.sh  dnsrr.nginx_in_host _net.docker-compose copy.yml  dnsrr.vip_ingress.docker-compose.yml  dnsrrNginxInVipHost.docker-compose.yml  dnsrrNginxInVipIngress.docker-compose.yml  docker-compose.linux.yml  docker-compose.yml  docker-compose_bridge_bridge.yml  docker-compose_bridge_c.yml  docker-compose_bridge_host.yml  docker-compose_host_c.yml  docker-compose_host_host.yml  docker-compose_outside.yml  dockerfile  hostNetNginxInHostNet.docker-compose.yml  nginx-for-host.conf  nginx.conf  pmfprc.json  push_manifest.ps1  push_manifest.sh  requirements-test_kafka.txt  requirements.txt  requirements_flask.txt  runXeyes.sh  runXeyesInMobaXterm.sh  run_container.ps1  (+7 more)
app/: Dockerfile  Dockerfile_test  __main__.py  app.py  build_image.ps1  build_image.sh  build_manifest.ps1  build_manifest.sh  push_manifest.ps1  push_manifest.sh  requirements.txt
app/app/: __main__.py
appflask/: __main__.py
balancer/: dockerfile
docs/: Docker的安装与配置.md  README.md  _sidebar.md  index.html  使用Portainer管理Docker环境.md  后话.md  结语.md
docs/Docker的镜像及管理/: Docker的镜像.md  README.md  利用harbor管理镜像.md  多阶段构建.md  结语.md  镜像仓库.md  镜像构建优化.md
drafts/: Docker体系下的log分析与监控.md  _sidebar.md
server/: Dockerfile  app.py  requirements.txt
src/: README.md  基本用法.ipynb  环境配置与基本用法.md  附录-常用命令及其说明.md
(+69 files in other folders)
