[metadata]
name = log_example_app
version = 0.0.1
author = hsz12
author_email = 
description = 
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = 
license = MIT License
classifiers = 
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
	pyproxypattern >= 0.0.1
	schema_entry >= 0.1.5
	pyloggerhelper >= 0.0.3
	apscheduler >= 3.7.0
	pytz >= 2021.1
tests_require = 
	coverage >= 5.5
	mypy >= 0.800
	autopep8 >= 1.5.6
	pylint >= 2.8.0
	pydocstyle>=6.0.0
setup_requires = 
	wheel >= 0.36.2
	setuptools >= 47.1.0

[options.packages.find]
include = TutorialForDocker
exclude = tests

